# QtReStreamer

./: CMakeLists.txt  LICENSE  main.cpp
